fix: 🐞 axis label color on dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,3 +32,8 @@ body {
 #menu-large {
   background: rgb(var(--menu-background-rgb));
 }
+
+.apexcharts-text.apexcharts-xaxis-label,
+.apexcharts-text.apexcharts-yaxis-label {
+  fill: rgb(var(--foreground-rgb));
+}
